# DevOps-Core-Course

./: .gitignore  README.md
.github/workflows/: ansible-deploy.yml  python-cd.yml  python-ci.yml  rust-cd.yml  rust-ci.yml  terraform-ci.yml
k8s/: ARGOCD.md  CONFIGMAPS.md  SECRETS.md
k8s/argocd/: application-dev.yaml  application-prod.yaml  application.yaml  applicationset.yaml
solution/app_python/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.dev.txt  requirements.txt
solution/app_python/docs/: LAB01.md  LAB02.md  LAB03.md
solution/app_python/tests/: test_app.py
solution/app_rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
solution/app_rust/docs/: LAB01.md  LAB02.md  Rust.md
solution/app_rust/src/: config.rs  main.rs  routes.rs  system.rs
solution/app_rust/src/templates/: error.html
solution/app_rust/tests/: integration_test.rs
solution/docs/: LAB04.md
solution/k8s/: HELM.md  README.md  deployment.yml  ingress.yml  namespace.yml  rust-deployment.yml  rust-service.yml  service.yml
solution/k8s/common-lib/: Chart.yaml
solution/k8s/devops-info-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
solution/k8s/devops-info-service-rust/: Chart.yaml  values.yaml
solution/lab04/pulumi/: .gitignore  __main__.py
solution/lab04/terraform/: README.md  outputs.tf  variables.tf  (+1 more)
solution/monitoring/: .env.example  docker-compose.yml
solution/pulumi/: Pulumi.dev.yaml.example  Pulumi.yaml  README.md  __main__.py  requirements.txt
solution/terraform/: .gitignore  main.tf
(+56 files in other folders)
