[package]
name = "devops-info-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "devops-info-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sys-info = "0.9"
log = "0.4"
env_logger = "0.11.8"
lazy_static = "1.5.0"
rustc_version = "0.4.1"
